changes default role when signup

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
     <!-- Main Content -->
     <main class="main-content">
 
+      <!-- Pending Approval Banner -->
+      <div class="approval-banner hidden" id="approvalBanner">
+        <i class="icon-info"></i>
+        <span>Your account is <strong>read-only</strong>. Contact an admin or head to get edit access.</span>
+      </div>
+
       <!-- ===== DASHBOARD ===== -->
       <section class="view active" id="view-dashboard">
         <div class="main-header">
